--- a/frontend/assets/css/styles.css
+++ b/frontend/assets/css/styles.css
@@ -111,8 +111,8 @@ button {
   background-color: #f2f2f2;
   border: 1px solid #cecece;
   border-radius: 3px;
-  min-height: 20%;
-  max-height: 20%;
+  min-height: 50px;
+  max-height: 50px;
 }
 
 .reset-all > button {
@@ -130,6 +130,14 @@ table tr > th{
   color: #fff;
   font-family: Roboto, sans-serif;
   font-size: 1.167em;
+}
+
+table > tbody > tr > td {
+  background-color: #f0f0f0;
+}
+
+table > tbody > tr > td > button{
+  background-color: #ff0000;
 }
 
 .info-items {
